feat: all catalog endpoints (except for update) made
