# src/catalog/internal/handlers/request.go
@@ -58,3 +58,171 @@ func PostRequest(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(201)
 	w.Write(res)
 }
+
+func DeleteRequest(w http.ResponseWriter, r *http.Request) {
+	id := r.PathValue("id")
+	req, err := storage.FetchRequest(id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+	err = storage.Delete("request", "id", id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	err = service.DeleteBook(req.Filename, r)
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	w.WriteHeader(204)
+}
+
+func GetRequest(w http.ResponseWriter, r *http.Request) {
+	id := r.PathValue("id")
+	req, err := storage.FetchRequest(id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	tags, err := storage.FetchRequestTags(req.ID, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	res := service.RequestResponseFromModel(*req, tags)
+	json, _ := json.Marshal(res)
+	w.Write(json)
+}
+
+func GetAllRequests(w http.ResponseWriter, r *http.Request) {
+	reqs, err := storage.FetchAllRequests(r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	res := make([]service.RequestResponse, 0)
+	for _, req := range reqs {
+		tags, err := storage.FetchRequestTags(req.ID, r.Context())
+		if err != nil {
+			shared.LogError(err)
+			shared.WriteError(w, 500, err)
+			return
+		}
+		resp := service.RequestResponseFromModel(req, tags)
+		res = append(res, resp)
+	}
+
+	json, _ := json.Marshal(res)
+	w.Write(json)
+}
+
+func PublishRequest(w http.ResponseWriter, r *http.Request) {
+	id := r.PathValue("id")
+
+	req, err := storage.FetchRequest(id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	tags, err := storage.FetchRequestTags(id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	book, err := storage.AddBook(*req, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	for _, tag := range tags {
+		storage.AddTagToBook(tag.Name, book.ID, r.Context())
+	}
+
+	err = storage.Delete("request", "id", id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	w.WriteHeader(201)
+}
+
+func GetRequestTags(w http.ResponseWriter, r *http.Request) {
+	id := r.PathValue("id")
+	req, err := storage.FetchRequest(id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	tags, err := storage.FetchRequestTags(req.ID, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	json, _ := json.Marshal(tags)
+	w.Write(json)
+}
+
+func PostRequestTag(w http.ResponseWriter, r *http.Request) {
+	id := r.PathValue("id")
+	tag := r.URL.Query().Get("tag")
+
+	req, err := storage.FetchRequest(id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+	_, err = storage.AddTagToRequest(tag, req.ID, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	w.WriteHeader(201)
+}
+
+func DeleteRequestTag(w http.ResponseWriter, r *http.Request) {
+	id := r.PathValue("id")
+	tag := r.URL.Query().Get("tag")
+
+	req, err := storage.FetchRequest(id, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+	err = storage.DeleteTagToRequest(tag, req.ID, r.Context())
+	if err != nil {
+		shared.LogError(err)
+		shared.WriteError(w, 500, err)
+		return
+	}
+
+	w.WriteHeader(204)
+}
