# src/catalog/internal/service/responses.go
@@ -18,7 +18,7 @@ type RequestResponse struct {
 	Tags         []string
 }
 
-func RequestResponseFromModel(model models.Request, tags []string) RequestResponse {
+func RequestResponseFromModel[T string | models.Tag](model models.Request, tags []T) RequestResponse {
 	return RequestResponse{
 		ID:           model.ID,
 		Filename:     model.Filename,
@@ -28,6 +28,46 @@ func RequestResponseFromModel(model models.Request, tags []string) RequestRespon
 		Category:     model.Category,
 		LanguageCode: model.LanguageCode,
 		Added:        model.Added,
-		Tags:         tags,
+		Tags:         mapTags(tags),
+	}
+}
+
+func mapTags[T string | models.Tag](items []T) []string {
+	// FIXME: looks a bit ugly
+	res := make([]string, len(items))
+	for i := range items {
+		switch t := any(items[i]).(type) {
+		case string:
+			res[i] = t
+		case models.Tag:
+			res[i] = t.Name
+		}
+	}
+	return res
+}
+
+type BookResponse struct {
+	ID           string
+	Filename     string
+	Title        string
+	AuthorName   string
+	Description  string
+	Category     string
+	LanguageCode string
+	Published    time.Time
+	Tags         []string
+}
+
+func BookResponseFromModel[T string | models.Tag](model models.Book, tags []T) BookResponse {
+	return BookResponse{
+		ID:           model.ID,
+		Filename:     model.Filename,
+		Title:        model.Title,
+		AuthorName:   model.AuthorName,
+		Description:  model.Description,
+		Category:     model.Category,
+		LanguageCode: model.LanguageCode,
+		Published:    model.Published,
+		Tags:         mapTags(tags),
 	}
 }
